Remove paragraph in otp mail

--- a/app/views/otp/mailer/otp.html.slim
+++ b/app/views/otp/mailer/otp.html.slim
@@ -1,4 +1,4 @@
-p Please use the verification code below to confirm your identity:
+| Please use the verification code below to confirm your identity:
 
 center
   strong #{@otp_code}
